[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/PayneJoe/test_sp1.git"

[workspace]
resolver = "3"

members = ["test_program", "test_program_script"]

[workspace.dependencies]
bitcoincore-rpc = "0.19.0"
bitcoincore-rpc-json = "0.19.0"
bdk_bitcoind_rpc = "0.20.0"
bdk_chain = "0.23.0"
bdk_wallet = "2.0.0"
bincode = "2.0.1"
bitcoin = { version = "0.32.6", default-features = false }
sp1-build = "5.0.0"
sp1-core-executor = "5.0.0"
sp1-derive = "5.0.0"
sp1-helper = "5.0.0"
sp1-prover = "5.0.0"
sp1-recursion-core = "5.0.0"
sp1-sdk = "5.0.0"
sp1-stark = "5.0.0"
sp1-verifier = "5.0.0"
sp1-zkvm = "5.0.0"
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", tag = "patch-0.29.1-sp1-5.0.0" }

[patch.crates-io]
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", tag = "patch-0.29.1-sp1-5.0.0" }
