[package]
name = "test_program"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sp1-zkvm = { workspace = true, features = ["verify"] }
sp1-verifier = { workspace = true }
# serde = { workspace = true }
# thiserror = { workspace = true }
bitcoin = { workspace = true, features = ["serde"], default-features = false}
