[package]
name = "vault-prover-host"
description = "test for SP1 zkVM programs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sp1-sdk = { workspace = true }
sp1-verifier = { workspace = true }
vault-prover-guest = { path = "../guest" }
