[package]
name = "vault-prover-program-tests"
description = "test for SP1 zkVM programs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vault-prover-programs = { workspace = true }
sp1-core-executor = { workspace = true }
sp1-prover = { workspace = true }
sp1-sdk = { workspace = true }
sp1-stark = { workspace = true }
sp1-verifier = { workspace = true, features = ["ark"] }
serde = { workspace = true }
vault-prover-program-core = { workspace = true }
