[package]
name = "pegout_test_program"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sp1-zkvm = { workspace = true, features = ["verify"] }
sp1-verifier = { workspace = true }
thiserror = { workspace = true }
vault-prover-program-core = { workspace = true }
sha2 = { workspace = true }
